# tide-rhai

./: .gitignore  Cargo.toml  Dockerfile  README.md
examples/: helloworld.rs  samples.rs
examples/app/: fetch.rhai  headers.rhai  helloworld.rhai
frontend/: Cargo.toml  package-lock.json  package.json  webpack.config.js
frontend/js/: playground-runner.js  playground.vue
frontend/js/components/: editor.vue  message.vue
public/: 1.js  2.js  COMMITHASH  VERSION  index.html  index.js
src/: fetch.rs  lib.rs  logging.rs  main.rs
test/: hello  logging  post  put
