[package]
name = "tide-rhai"
version = "0.1.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1", features = ["attributes"] }
serde = { version = "1.0.117", features = ["derive"] }
openapi = "0.1.5"
anyhow = "1.0.38"
rhai = { version = "0.19.13", features = ["serde"] }
cloudevents-sdk = "0.3.1"
url = "2.2.1"
tide-naive-static-files = "2.2.0"
http-types = "2.10.0"
uuid = "0.8.2"
serde_json = "1.0.64"

[dev-dependencies]
surf = "2.2.0"
