[package]
name = "tide-rhai"
version = "0.0.1"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A scritping component for tide."
documentation = "https://docs.rs/tide-rhai"
readme = "README.md"
repository = "https://github.com/no9/tide-rhai"
exclude = [
    ".github/*"
]
categories = ["web-programming"]

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.5", features = ["unstable"] }
async-trait = "0.1.41"
rhai = { version = "0.19.15", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
http-types = "2.10.0"
[dev-dependencies]
async-std = { version = "1.6.5", features = ["unstable", "attributes"] }
tempfile = "3.1.0"
tide-testing = "0.1.3"
